# CalculatorAPI

./: Cargo.toml
.cargo/: .global-cache
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: axum-macros-0.4.1.crate  axum-server-0.7.1.crate  cookie_store-0.21.0.crate  http-range-header-0.4.1.crate  httpc-test-0.1.10.crate  lazy-regex-3.2.0.crate  lazy-regex-proc_macros-3.2.0.crate  publicsuffix-2.2.3.crate  reqwest_cookie_store-0.8.0.crate  sqlb-0.4.0.crate  sqlb-macros-0.4.0.crate  tower-cookies-0.10.0.crate
.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-macros-0.4.1/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-server-0.7.1/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/cookie_store-0.21.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/http-range-header-0.4.1/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/httpc-test-0.1.10/: Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/lazy-regex-3.2.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/lazy-regex-proc_macros-3.2.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/publicsuffix-2.2.3/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/reqwest_cookie_store-0.8.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-6f17d22bba15001f/serde_with-3.9.0/: .cargo_vcs_info.json
src/: main.rs  quick_dev.rs
src/routes/: routes.rs
(+6 files in other folders)
