[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

